# cgn_pytorch

./: .gitignore  README.md  azure-pipelines.yml  eval.py  pyproject.toml  requirements.txt  train.py
cgn_pytorch/: __init__.py  contact_graspnet.py  dataset.py  pointnet2.py
cgn_pytorch/util/: config_utils.py  data_utils.py  mesh_utils.py  pcd_utils.py  rgbd_visualizer.py  scene_renderer.py  simple_demo.py  test_meshcat_pcd.py
cgn_pytorch/util/pointnet2/: __init__.py  models.py
